# SherringtonKirkpatrick

./: .gitignore  README.md
data/: sk30Jij.npy
report/Latex/: report.tex
src/: data_manager.py  exhaustive_sample.py  exhaustive_search.py  generate_data.py  load_data.py  main.py  model.py  npy2txt.py  result.py  sdp_relaxation.py  simulated_annealing.py  test.py  train.py
src/exhaustive_search/: CMakeLists.txt
src/exhaustive_search/data/: sk30Jij.txt
src/exhaustive_search/include/: solver.cuh
src/exhaustive_search/src/: generate_data.cpp  main.cpp  result.cpp  solver.cu
src/methods/: __init__.py  exhaustive_search.py  hybrid_strategy.py  sdp_relaxation.py  simulated_annealing.py
